# CrawlnChat

./: .env.example  .gitignore  LICENSE  README.md  brand_guidelines.md  pyproject.toml  requirements.txt  setup.py  websites.json.example
src/: cli.py  main.py
src/api/: __init__.py  fastapi_app.py  mcp_app.py
src/core/: __init__.py  agents.py  brand_review.py  logger.py  router.py  settings.py
src/crawler/: __init__.py  fetcher.py  processor.py  sitemap.py
src/vector_store/: __init__.py  base.py  chunker.py  pinecone.py
