[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlnchat"
version = "0.1.1"
description = "CrawlnChat: A web crawler with chat interface"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "jroakes" }
]

[tool.setuptools]
packages = ["src"] 