[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlnchat"
version = "0.1.1"
description = "CrawlnChat: A web crawler with chat interface"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "jroakes" }
]
dependencies = [
    "aiohttp>=3.10.11",
    "anthropic>=0.49.0",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.3",
    "brotli>=1.1.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "langchain>=0.3.21",
    "langchain-core>=0.3.45",
    "langchain-openai>=0.3.9",
    "langchain-pinecone>=0.2.3",
    "langchain-text-splitters>=0.3.7",
    "langgraph>=0.3.16",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "markitdown>=0.0.2",
    "mcp>=1.4.1",
    "openai>=1.66.5",
    "pinecone>=5.4.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]

[tool.setuptools]
packages = ["src"] 
